--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codeplant/react-toast-notifications",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "A configurable, composable, toast notification system for react.",
   "main": "dist/index.js",
   "typings": "./index.d.ts",
@@ -56,11 +56,11 @@
     "webpack-dev-server": "^3.1.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "volta": {
-    "node": "18.13.0"
+    "node": "22.12.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
